--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -15,7 +15,7 @@
 
 <body>
 	
-	<main>
+	<main class="mb-4">
 
 <!--- Блок навигации !--->
 
@@ -65,7 +65,7 @@
 
 </main>
 
-<footer class="mt-5">
+<footer>
 	<nav class="navbar navbar-expand-lg " style="background-color: #028E9B;">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
