--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -30,7 +30,7 @@
 
 <div class="container-fluid text-center">
 	<div class="row row-cols-4 gy-4" id="cardplace">
-		{% for p in posts %}
+		{% for p in page_obj %}
 
 		<div class="col-md-3">
 
@@ -90,10 +90,39 @@
 		{% endfor %}
 
 		
+
 	</div>
-	
+	<nav class="mt-4">
+		<ul class="pagination justify-content-center">
+
+			{% if page_obj.has_previous %}
+			<li class="page-item">
+			    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+			</li>
+			{% endif %}
+
+			{% for p in page_obj.paginator.page_range %}
+			{% if page_obj.number == p %}
+			<li class="page-item disabled"><a class="page-link" href="#">{{ p }}</a></li>
+			{% else %}
+			<li class="page-item">
+			    <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+			</li>
+			{% endif %}
+			{% endfor %}
+
+			{% if page_obj.has_next %}
+			<li class="page-item">
+			    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+			</li>
+			{% endif %}
+		</ul>
+	</nav>
 			
 </div>
+
+
+
 </section>
 
 {% block javascript %}
@@ -110,7 +139,6 @@
                 data: {orderby: this.attributes.value.textContent},
 			    success: function(data){
 			    	console.log(data);
-                    
                     let posts = data["posts"];
                     let ind = 0;
                     let ar_len = posts.length;
@@ -118,8 +146,8 @@
                     let list = element.querySelectorAll(".col-md-3");
                     while (ind <= ar_len) {
                     	for (const l of list) {
-                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("src");
                     		const newsrc = posts[ind]["photo_small"];
+                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("src");
                     		l.getElementsByClassName("card-img-top rounded")[0].setAttribute("src", newsrc);
 
                     		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("title");
@@ -161,46 +189,18 @@
                     		span_comments.innerText = "";
                     		span_comments.insertAdjacentText("afterbegin", posts[ind]["comments"]);
                     		
-							++ind;
-
-
-                    		
+							++ind;	
                     	}
-                   
-
                     }
-
 				}
 			});
 		});
 	});
 
 
+	
+
 </script>
 
 {% endblock javascript %}
-{% endblock %}
-
-{% block pagination %}
-{% if is_paginated %}
-<nav>
-  <ul class="pagination justify-content-center">
-  	{% if page_obj.has_previous %}
-    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ page_obj.previous_page_number }}"style="background-color: #028E9B;">Предыдущая</a></li>
-    {% endif %}
-
-    {% for p in paginator.page_range %}
-    {% if page_obj.number == p %}
-    <li class="page-item disabled"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ p }}" style="background-color: #028E9B;">{{p}}</a></li>
-    {% else %}
-    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ p }}" style="background-color: #028E9B;">{{p}}</a></li>
-    {% endif %}
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ page_obj.next_page_number }}" style="background-color: #028E9B;">Следующая</a></li>
-    {% endif %}
-  </ul>
-</nav>
-{% endif %}
 {% endblock %}
