--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -1,6 +1,6 @@
 {% extends 'photo_app/base.html' %}
 
-
+{% load static %}
 {% block content %}
 
 <div class="container-fluid">
@@ -11,17 +11,15 @@
 	    Отсортировать
 			</button>
 			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" value="DateOld" href="#">По дате (старые) </a></li>
-			    <li><a class="dropdown-item" value="DateNew" href="#">По дате (новые)</a></li>
-			    <li><a class="dropdown-item" value="Voices" href="#">По голосам (популярные)</a></li>
-			    <li><a class="dropdown-item" value="VoicesRev" href="#">По голосам (непопулярные)</a></li>
-			    <li><a class="dropdown-item" value="Comments" href="#">По комментариям (популярные)</a></li>
-			    <li><a class="dropdown-item" value="CommentsRev" href="#">По комментариям (непопулярные)</a></li>
+				<li><a class="dropdown-item" value="pub_date" href="#">По дате (старые) </a></li>
+			    <li><a class="dropdown-item" value="-pub_date" href="#">По дате (новые)</a></li>
+			    <li><a class="dropdown-item" value="-voices" href="#">По голосам (популярные)</a></li>
+			    <li><a class="dropdown-item" value="voices" href="#">По голосам (непопулярные)</a></li>
+			    <li><a class="dropdown-item" value="-comments" href="#">По комментариям (популярные)</a></li>
+			    <li><a class="dropdown-item" value="comments" href="#">По комментариям (непопулярные)</a></li>
 			</ul>
-
 	  </div>
 	</div>
-
 </div>
 
 
@@ -35,11 +33,11 @@
 		<div class="col-md-3">
 
 			<div class="card" style="width: 18rem; border-color: #E5E5E5;">
-				<img src="{{p.photo_small.url}}" class="card-img-top rounded" alt="..." title="{{p.description|capfirst}}">
+				<img src="{{p.photo_small.url}}" class="card-img-top rounded" alt="..." title="{{p.description}}">
 
 				<div class="card-body">
 
-					<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="photo/{{p.id}}">{{p.title|capfirst}}</a></h5>
+					<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="photo/{{p.id}}">{{p.title}}</a></h5>
 
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item" style="border-color: #E5E5E5;" id = "firstli">
@@ -94,26 +92,14 @@
 	</div>
 	<nav class="mt-4">
 		<ul class="pagination justify-content-center">
-
-			{% if page_obj.has_previous %}
+			{% if page_obj.paginator.num_pages > 1 %}
+			{% for p in page_obj.paginator.page_range %}			
 			<li class="page-item">
-			    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+			    <a class="page-link" id = "pagenum_{{p}}" href="#">{{ p }}</a>
 			</li>
-			{% endif %}
-
-			{% for p in page_obj.paginator.page_range %}
-			
-			<li class="page-item">
-			    <a class="page-link" id = "pagenum" href="#">{{ p }}</a>
-			</li>
-			
 			{% endfor %}
-
-			{% if page_obj.has_next %}
-			<li class="page-item">
-			    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
-			</li>
 			{% endif %}
+
 		</ul>
 	</nav>
 			
@@ -127,7 +113,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script>
+<script src="{% static 'photo_app/js/ajax_func.js' %}">
 	$(document).ready(function(){
 		$("a.dropdown-item").click(function(){
 			$.ajax({
@@ -136,59 +122,8 @@
 				dataType: 'json',
                 data: {orderby: this.attributes.value.textContent},
 			    success: function(data){
-                    let posts = data["posts"];
-                    let ind = 0;
-                    let ar_len = posts.length;
-                    let element = document.getElementById("cardplace");
-                    let list = element.querySelectorAll(".col-md-3");
-                    while (ind <= ar_len) {
-                    	for (const l of list) {
-                    		const newsrc = posts[ind]["photo_small"];
-                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("src");
-                    		l.getElementsByClassName("card-img-top rounded")[0].setAttribute("src", newsrc);
-
-                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("title");
-                    		const title_element = l.getElementsByClassName("link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0];
-                    		title_element.innerText="";
-                    		title_element.insertAdjacentText("afterbegin", posts[ind]["title"]);
-
-                    		const desc = posts[ind]["description"];
-                    		l.getElementsByClassName("card-img-top rounded")[0].setAttribute("title", desc);
-
-                    		l.getElementsByClassName(
-                    			"link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0].removeAttribute("href");
-                    		const newhref = "photo/" + posts[ind]["id"];
-                    		l.getElementsByClassName(
-                    			"link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0].setAttribute("href", newhref);
-
-
-                    		l.getElementsByClassName("list-group-item")[0].remove();
-                    		l.getElementsByClassName("list-group-item")[0].remove();
-                    		const ul_element = l.getElementsByClassName("list-group list-group-flush")[0];
-                    		const html1 = '<li class="list-group-item" style="border-color: #E5E5E5;" id = "firstli"><p class="card-text"><small class = "first_sm"></small></p></li>';
-                    		ul_element.insertAdjacentHTML("afterbegin", html1);
-                    		ul_element.querySelector(".first_sm").insertAdjacentText("afterbegin", posts[ind]["author"]["email"]);
-
-                    		const html2 = '<li class="list-group-item" id="secondli"><p class="card-text"><small class = "second_sm"></small></p></li>';
-                    		ul_element.insertAdjacentHTML("beforeend", html2);
-                    		dt = new Date(Date.parse(posts[ind]["pub_date"]));
-                    		if ((dt.getMonth() + 1).length == 1) { 
-                    			dt_month = "0" + (dt.getMonth() + 1);} else {
-                    				dt_month = dt.getMonth() + 1 ;
-                    			}
-                            fulldt = dt.getHours() + ':' + dt.getMinutes() + '\n' + dt.getDate() + '.' + dt_month + '\n' + dt.getFullYear();
-                            ul_element.querySelector(".second_sm").insertAdjacentText("afterbegin", fulldt);
-                    		
-                    		const span_voices = l.getElementsByClassName("badge text-light")[0];
-                    		span_voices.innerText = "";
-                    		span_voices.insertAdjacentText("afterbegin", posts[ind]["voices"]);
-                    		const span_comments = l.getElementsByClassName("badge text-light")[1];
-                    		span_comments.innerText = "";
-                    		span_comments.insertAdjacentText("afterbegin", posts[ind]["comments"]);
-                    		
-							++ind;	
-                    	}
-                    }
+                    ajax_list(data);
+                    
 				}
 			});
 		});
@@ -196,71 +131,16 @@
 
 </script>
 
-<script>
+<script src="{% static 'photo_app/js/ajax_func.js' %}">
 	$(document).ready(function(){
 		$("a.page-link").click(function(){
 			$.ajax({
 				url: '',
 				method: 'get',
 				dataType: 'json',
-				data: {page: this.textContent},
+				data: {page: this.textContent}, 
 			    success: function(data){
-					console.log(data["page_num"]);
-			    	let posts = data["posts"];
-                    let ind = 0;
-                    let ar_len = posts.length;
-                    let element = document.getElementById("cardplace");
-                    let list = element.querySelectorAll(".col-md-3");
-
-                    while (ind <= ar_len) {
-                    	for (const l of list) {
-                    		const newsrc = posts[ind]["photo_small"];
-                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("src");
-                    		l.getElementsByClassName("card-img-top rounded")[0].setAttribute("src", newsrc);
-
-                    		l.getElementsByClassName("card-img-top rounded")[0].removeAttribute("title");
-                    		const title_element = l.getElementsByClassName("link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0];
-                    		title_element.innerText="";
-                    		title_element.insertAdjacentText("afterbegin", posts[ind]["title"]);
-
-                    		const desc = posts[ind]["description"];
-                    		l.getElementsByClassName("card-img-top rounded")[0].setAttribute("title", desc);
-
-                    		l.getElementsByClassName(
-                    			"link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0].removeAttribute("href");
-                    		const newhref = "photo/" + posts[ind]["id"];
-                    		l.getElementsByClassName(
-                    			"link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white")[0].setAttribute("href", newhref);
-
-
-                    		l.getElementsByClassName("list-group-item")[0].remove();
-                    		l.getElementsByClassName("list-group-item")[0].remove();
-                    		const ul_element = l.getElementsByClassName("list-group list-group-flush")[0];
-                    		const html1 = '<li class="list-group-item" style="border-color: #E5E5E5;" id = "firstli"><p class="card-text"><small class = "first_sm"></small></p></li>';
-                    		ul_element.insertAdjacentHTML("afterbegin", html1);
-                    		ul_element.querySelector(".first_sm").insertAdjacentText("afterbegin", posts[ind]["author"]["email"]);
-
-                    		const html2 = '<li class="list-group-item" id="secondli"><p class="card-text"><small class = "second_sm"></small></p></li>';
-                    		ul_element.insertAdjacentHTML("beforeend", html2);
-                    		dt = new Date(Date.parse(posts[ind]["pub_date"]));
-                    		if ((dt.getMonth() + 1).length == 1) { 
-                    			dt_month = "0" + (dt.getMonth() + 1);} else {
-                    				dt_month = dt.getMonth() + 1 ;
-                    			}
-                            fulldt = dt.getHours() + ':' + dt.getMinutes() + '\n' + dt.getDate() + '.' + dt_month + '\n' + dt.getFullYear();
-                            ul_element.querySelector(".second_sm").insertAdjacentText("afterbegin", fulldt);
-                    		
-                    		const span_voices = l.getElementsByClassName("badge text-light")[0];
-                    		span_voices.innerText = "";
-                    		span_voices.insertAdjacentText("afterbegin", posts[ind]["voices"]);
-                    		const span_comments = l.getElementsByClassName("badge text-light")[1];
-                    		span_comments.innerText = "";
-                    		span_comments.insertAdjacentText("afterbegin", posts[ind]["comments"]);
-                    		
-							++ind;
-						}
-					}
-
+			    	ajax_list(data);
 
 			    }
 			});
@@ -269,6 +149,25 @@
 
 
 </script>
+<script src='{% static "photo_app/js/ajax_func.js" %}'>
+	$(document).ready(function(){
+		$("button#search").click(function(){
+			$.ajax({
+				url: '',
+				method: 'get',
+				dataType: 'json',
+				data: {orderbysearch: orderbysearch.value},
+			    success: function(data){
+					ajax_list(data);
+			    }
+			});
+		});
+	});
+
+
+</script>
+
+
 
 {% endblock javascript %}
 {% endblock %}
