--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -6,7 +6,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title id="page-title"> Страница {{page_num}} </title>
+	
+	<title>Фотоконкурс</title>
+	
+
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
@@ -46,7 +49,7 @@
 
 <!--- Авторизация/регистрация !--->
 
-		        <a class="icon-link link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">
+		        <a class="icon-link link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="social-auth/login/vk-oauth2">
   					<svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
   						<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
 						<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/><use xlink:href="#box-seam"></use></svg>
