--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 {% load static %}
+{% load account socialaccount %}
 
 <head>
 	<meta charset="utf-8">
@@ -48,7 +49,7 @@
 
 <!--- Авторизация/регистрация !--->
 
-		        <a class="icon-link link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="social-auth/login/vk-oauth2">
+		        <a class="icon-link link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{% provider_login_url 'vk' method='oauth2' %}">
   					<svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
   						<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
 						<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/><use xlink:href="#box-seam"></use></svg>
