--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -1,6 +1,7 @@
 {% extends 'photo_app/base.html' %}
 
 {% load static %}
+{% load account socialaccount %}
 {% block content %}
 
 <div class="container-fluid">
