--- a/photo_app/templates/photo_app/upload_photos.html
+++ b/photo_app/templates/photo_app/upload_photos.html
@@ -2,44 +2,47 @@
 
 {% block content %}
 
-<form action="" method="post" enctype="multipart/form-data" class="container">
-	{% csrf_token %}
-	
-	<!--- <div class="mb-3">
+<div class="container-fluid my-4">
+	<div class="card mx-5 overflow-auto border-white mb-3">
+		<form action="" method="post" enctype="multipart/form-data" class="container">
+			{% csrf_token %}
+			<div class="row mb-3">
+				<div class="col-sm-4 ">
 
-		 <label for="exampleFormControlInput1" class="form-label">Автор</label>
-		<input type="email" name="author" class="form-control" id="exampleFormControlInput1" placeholder="Адрес электронной почты"> 
+					<label for="exampleFormControlInput1" class="form-label">Название</label>
+					<input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Название фото">
 
-	</div> !--->
+				</div>
+			</div>
 
-	<div class="mb-3">
+			<div class="row mb-3">
+				<div class="col-sm-6">
 
-		<label for="exampleFormControlInput1" class="form-label">Название</label>
-		<input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Название фото">
+				  	<label for="exampleFormControlTextarea1" class="form-label">Описание</label>
+				  	<textarea class="form-control" name="description" id="exampleFormControlTextarea1" rows="3" placeholder="Расскажите о вашем фото"></textarea>
 
+				</div>
+			</div>
+
+			<div class="row mb-3">
+				<div class="col-sm-4">
+
+				  	<label for="formFile" class="form-label">Загрузите фото</label>
+				  	<input name="image" class="form-control" type="file" id="formFile">
+
+				</div>
+			</div>
+
+					
+			<div class="row mb-3">
+				<div class="col-sm-2">
+					<button class="btn btn-outline-light" style="background-color: #028E9B;">
+					Сохранить</button>
+				</div>
+			</div>
+					
+		</form>
+		
 	</div>
-
-	<div class="mb-3">
-
-  		<label for="exampleFormControlTextarea1" class="form-label">Описание</label>
-  			<textarea class="form-control" name="description" id="exampleFormControlTextarea1" rows="3"></textarea>
-
-	</div>
-
-
-	<div class="mb-3">
-
-  		<label for="formFile" class="form-label">Загрузите фото</label>
-  			<input name="image" class="form-control" type="file" id="formFile">
-
-  	</div>
-
-	<!--- <p> Название {{form.title}} </p>
-	<p> Ваше фото {{form.image}} </p>
-	<p> Описание {{form.description}} </p> !--->
-	<div>
-		<button class="btn btn-outline-light" style="background-color: #028E9B;">Сохранить</button>
-	</div>
-	
-</form>
+</div>
 {% endblock %}
